2004-01-26 Andrew Zabolotny <zap@homelink.ru>

	* README: Updated documentation on module parameters.
	* plugins/linear.c: Removed the bogus noxyswap parameter.

2004-06-14  Chris Larson  <kergoth@handhelds.org>

	* src/ts_read_raw.c: Fix bug hit by me and identified by Phil
	  related to the way we call the raw read functions.
	* src/input-raw.c (ts_input_read): Rename function, call out
	  check_fd to confirm sanity of this inputdevice, make EV_SYN
	  decision at runtime.
	* src/input-raw.c (check_fd): Rework a bit, and check for EV_SYN
	  event availability.
	* src/input-raw.c (mod_init): Switch from static to vars in our
	  malloced tslib_module_info based structure.
	* src/input-raw.c (ts_input_fini): New function.  Free malloced structure.
	* etc/ts.conf: Add commented module_raw entry for 'input'.
	* src/ts_config.c: Abort and warn when no raw modules were loaded.
	* plugins/*.c: Use C99 initializers.

2004-06-11  Philip Blundell  <philb@gnu.org>

	* plugins/variance.c (variance_read): Also clear VAR_LASTVALID on
	  pen up events.

2004-06-09  Chris Larson  <kergoth@handhelds.org>

	* plugins/Makefile.am: Ensure plugins get installed.
	* plugins/input-raw.c: Watch for a BTN_TOUCH input key event,
	  to use it as an indication of pen release.

2004-06-09  Glenn McGrath  <glennm@hydrix.com>
	* input-raw.c:
	  - Rewrite !EV_SYN section.
	  - Never return -1, causes cursor flicker in kdrive xserver.
	  - Handle partial reads without throwing out data.
	  - Run through indent.
	  - Simplify.
	* ts_config.c:
	  - Optimize to save some space.
	  - Fix long line check, they dont always end '\n'.
	  - Report the name of modules that wont load.
	* configure.ac:
	  - Allow default plugindir to be set by configure.

2004-06-08  Philip Blundell  <philb@gnu.org>

	Patch from Glenn McGrath <bug1@iinet.net.au>
	* configure.in: Renamed to ...
	* configure.ac: ... this.  Use AM_CONDITIONAL to enable plugins.
	  Fix confusion between input and arctic2 drivers.  Install plugins